arrumada aqui e ali

--- a/form.html
+++ b/form.html
@@ -10,7 +10,31 @@
 
 <body>
 	<div class="conteiner">
-		
+		<div class="section-branca">
+			<h1 class="titulo-base">
+				como apoiar a ONG?
+			</h1>	
+		</div>
+		<div class="section-base">
+			<h1 class="titulo-peach">
+				Sadraque_Mesaque_abdnego.com.br
+			</h1>
+			
+			<p class="paragrafo-m">
+				pix? <br>
+				pix? <br>
+				pix? <br>
+				pix? <br>
+			</p>
+
+			<a href="index.html">
+				<div class="div-btn">
+					<p class="paragrafo-m-inv">
+						Frenesi (Machine Girl GabberTrap Mix)
+					</p>
+				</div>
+			</a>
+		</div>
 	</div>	
 </body>
 
