--- a/index.html
+++ b/index.html
@@ -10,14 +10,42 @@
 
 <body>
 	<div class="conteiner">
+
+		<!-- section titulo -->
+
 		<div class="section-base">
-			<h1 class="titulo-peach">
-				ONG
+
+			<div class="menu-topo">
+
+				<a class="btn-texto-puro" href="form.html">
+					lei Maria da Penha
+				</a>
+				<a class="btn-texto-puro" href="form.html">
+					nossa ONG
+				</a>
+				<a class="btn-texto-puro" href="form.html">
+					entre em contato
+				</a>	
+				<a class="btn-texto-puro" href="form.html">
+					doe
+				</a>	
+			</div>
+
+			<h1 class="titulo-principal">
+				TIPOS DE VIOLÊNCIA
 			</h1>
+			<p class="subtitulo-principal">
+					Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident.
+			</p>
 			<p class="paragrafo-m">
-				sente-se vitima de violencia?
+					Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.
+			</p>
+			<p class="paragrafo-m">
+					Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.
 			</p>
 		</div>
+		
+		<!-- section info -->
 
 		<div class="section-branca">
 			<p class="paragrafo-m-inv">
@@ -25,14 +53,14 @@
 			</p>
 			<a href="https://open.spotify.com/artist/5RADpgYLOuS2ZxDq7ggYYH?si=oVk9McscTVW9QvcOZCE7IA" target="_blank">
 				<div class="div-btn-inv">
-					<p class="paragrafo-m">
+					<p class="texto-btn">
 						melhor banda do multiverso XD
 					</p>
 				</div>
 			</a>
 			<a href="form.html">
 				<div class="div-btn-inv">
-					<p class="paragrafo-m">
+					<p class="texto-btn">
 						como ajudar a ong?
 					</p>
 				</div>
