--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>ONG</title>
 </head>
 
