remocao do lorem ipsum

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 					lei Maria da Penha
 				</a>
 				<a class="btn-texto-puro" href="form.html">
-					nossa ONG
+					Nossa ONG
 				</a>
 				<a class="btn-texto-puro" href="form.html">
-					entre em contato
+					Entre em contato
 				</a>	
 				<a class="btn-texto-puro" href="form.html">
-					doe
+					Faça uma doação
 				</a>	
 			</div>
 
@@ -35,33 +35,42 @@
 				TIPOS DE VIOLÊNCIA
 			</h1>
 			<p class="subtitulo-principal">
-					Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident.
+				A Lei Maria da Penha trata especificamente da violência doméstica e familiar contra a mulher, e o Art. 7º enumera algumas das formas de violências que infelizmente as mulheres podem acabar sofrendo. 
+				<br>
+				São elas, dentre outras, as violências física, psicológica, sexual, patrimonial, doméstica, intrafamiliar, institucional ou até mesmo feminicídio.
 			</p>
 			<p class="paragrafo-m">
-					Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.
+				Essas formas de agressão são complexas, perversas, não ocorrem isoladas umas das outras e têm graves consequências para a mulher. Qualquer uma delas constitui ato de violação dos direitos humanos e deve ser denunciada.
 			</p>
 			<p class="paragrafo-m">
-					Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.
+				A missão da (nome da nossa ong) é promover a igualdade de gênero e a proteção das mulheres através da conscientização e do suporte jurídico. 
+				<br>
+				Buscamos oferecer informações claras e acessíveis sobre os direitos das mulheres e as legislações pertinentes, enfatizando a Lei Maria da Penha como um instrumento essencial na luta contra a violência doméstica e o feminicídio..
 			</p>
+			<h1 class="titulo-mauve">
+				Não se cale, denuncie.
+				
+			</h1>
+			
 		</div>
 		
 		<!-- section info -->
 
 		<div class="section-branca">
-			<p class="paragrafo-m-inv">
-				sadraque mesaque e abdnego
+			<p class="titulo-base">
+				Mais Informações:
 			</p>
 			<a href="https://open.spotify.com/artist/5RADpgYLOuS2ZxDq7ggYYH?si=oVk9McscTVW9QvcOZCE7IA" target="_blank">
 				<div class="div-btn-inv">
 					<p class="texto-btn">
-						melhor banda do multiverso XD
+						Confira todos os tipos de lei
 					</p>
 				</div>
 			</a>
 			<a href="form.html">
 				<div class="div-btn-inv">
 					<p class="texto-btn">
-						como ajudar a ong?
+						Como ajudar a ONG?
 					</p>
 				</div>
 			</a>
