alterando aba ong e menu

--- a/form.html
+++ b/form.html
@@ -12,25 +12,37 @@
 	<div class="conteiner">
 		<div class="section-branca">
 			<h1 class="titulo-base">
-				como apoiar a ONG?
+				Sobre nós
 			</h1>	
 		</div>
 		<div class="section-base">
 			<h1 class="titulo-peach">
-				Sadraque_Mesaque_abdnego.com.br
+				Nossa missão como ONG em prol dos direitos das mulheres:
 			</h1>
 			
 			<p class="paragrafo-m">
-				pix? <br>
-				pix? <br>
-				pix? <br>
-				pix? <br>
+				A ONG tem como missão fornecer apoio integral às mulheres vítimas de violência, promover a conscientização sobre a violência de gênero e lutar por políticas públicas mais eficazes para garantir a segurança e os direitos das mulheres.
+				Visamos um futuro onde todas as mulheres vivam livres de violência, com acesso a recursos que promovam sua autonomia, dignidade e igualdade. 
+				<br>
+				 <br>
+				 A missão da (nome da nossa ong aq) é promover a igualdade de gênero e a proteção das mulheres através da conscientização e do suporte jurídico.
+				Buscamos oferecer informações claras e acessíveis sobre os direitos das mulheres e as legislações pertinentes, enfatizando a Lei Maria da Penha como um instrumento essencial na luta contra a violência doméstica e o feminicídio.
+			</p>
+
+			<h1 class="titulo-peach">
+			Visão
+			</h1>
+
+			<p class="paragrafo-m">
+				Visamos um futuro onde todas as mulheres vivam livres de violência, com acesso a recursos que promovam sua autonomia, dignidade e igualdade. 
+				<br>
+				Queremos construir uma sociedade em que o respeito e a igualdade de gênero sejam princípios fundamentais.
 			</p>
 
 			<a href="index.html">
 				<div class="div-btn">
 					<p class="paragrafo-m-inv">
-						Frenesi (Machine Girl GabberTrap Mix)
+						MENU
 					</p>
 				</div>
 			</a>
