--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			<div class="menu-topo">
 
-				<a class="btn-texto-puro" href="form.html">
+				<a class="btn-texto-puro" href="index.html">
 					lei Maria da Penha
 				</a>
 				<a class="btn-texto-puro" href="form.html">
@@ -32,22 +32,34 @@
 			</div>
 
 			<h1 class="titulo-principal">
-				TIPOS DE VIOLÊNCIA
+				LEI MARIA DA PENHA
 			</h1>
+		
 			<p class="subtitulo-principal">
 				A Lei Maria da Penha trata especificamente da violência doméstica e familiar contra a mulher, e o Art. 7º enumera algumas das formas de violências que infelizmente as mulheres podem acabar sofrendo. 
 				<br>
 				São elas, dentre outras, as violências física, psicológica, sexual, patrimonial, doméstica, intrafamiliar, institucional ou até mesmo feminicídio.
-			</p>
-			<p class="paragrafo-m">
-				Essas formas de agressão são complexas, perversas, não ocorrem isoladas umas das outras e têm graves consequências para a mulher. Qualquer uma delas constitui ato de violação dos direitos humanos e deve ser denunciada.
-			</p>
-			<p class="paragrafo-m">
-				A missão da (nome da nossa ong) é promover a igualdade de gênero e a proteção das mulheres através da conscientização e do suporte jurídico. 
 				<br>
-				Buscamos oferecer informações claras e acessíveis sobre os direitos das mulheres e as legislações pertinentes, enfatizando a Lei Maria da Penha como um instrumento essencial na luta contra a violência doméstica e o feminicídio..
+				<br>
+				Essas formas de agressão são complexas, perversas, não ocorrem isoladas umas das outras e têm graves consequências para a mulher. Qualquer uma delas constitui ato de violação dos direitos humanos e deve ser denunciada.
+				<br>
+				<br>
+				O seu surgimento está diretamente ligado à história de vida de Maria da Penha, que se tornou um símbolo de luta no combate à violência doméstica contra a mulher.
+				<br>
+				<br>
+				Só para lembrar: a Lei n. 11.340/2006 leva o nome de Maria da Penha como uma forma de reparação simbólica depois de tantos anos de omissão do Estado brasileiro e de impunidade do seu agressor. Ela também representa o acesso à justiça e foi criada para garantir os direitos de milhares de mulheres vítimas de violência no País.
 			</p>
-			<h1 class="titulo-mauve">
+			
+			<h1 class="titulo-principal2">
+				TIPOS DE VIOLENCIA
+			</h1>
+
+			<p class="paragrafo-m">
+				ALGUMA COISA
+				<br>
+				ALGUMA COISA
+			</p>
+			<h1 class="destacar-frase">
 				Não se cale, denuncie.
 				
 			</h1>
@@ -57,20 +69,20 @@
 		<!-- section info -->
 
 		<div class="section-branca">
-			<p class="titulo-base">
-				Mais Informações:
+			<p class="paragrafo-m-inv">
+				Mais Informações
 			</p>
 			<a href="https://open.spotify.com/artist/5RADpgYLOuS2ZxDq7ggYYH?si=oVk9McscTVW9QvcOZCE7IA" target="_blank">
 				<div class="div-btn-inv">
 					<p class="texto-btn">
-						Confira todos os tipos de lei
+						Entre em contato
 					</p>
 				</div>
 			</a>
 			<a href="form.html">
 				<div class="div-btn-inv">
 					<p class="texto-btn">
-						Como ajudar a ONG?
+						Nossa ONG
 					</p>
 				</div>
 			</a>
