refatorando form.html para about.html

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 				<a class="btn-texto-puro" href="index.html">
 					lei Maria da Penha
 				</a>
-				<a class="btn-texto-puro" href="form.html">
+				<a class="btn-texto-puro" href="about.html">
 					Nossa ONG
 				</a>
-				<a class="btn-texto-puro" href="form.html">
+				<a class="btn-texto-puro" href="about.html">
 					Entre em contato
 				</a>	
-				<a class="btn-texto-puro" href="form.html">
+				<a class="btn-texto-puro" href="about.html">
 					Faça uma doação
 				</a>	
 			</div>
@@ -79,7 +79,7 @@
 					</p>
 				</div>
 			</a>
-			<a href="form.html">
+			<a href="about.html">
 				<div class="div-btn-inv">
 					<p class="texto-btn">
 						Nossa ONG
