formatacão & pequenas mudancas visuais

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<br>
 				ALGUMA COISA
 			</p>
-			<h1 class="destacar-frase">
+			<h1 class="titulo-mauve">
 				Não se cale, denuncie.
 				
 			</h1>
