página 'sobre nós'

--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
 
 			<div class="menu-topo">
 
-				<a class="btn-texto-puro" href="index.html">
-					lei Maria da Penha
-				</a>
 				<a class="btn-texto-puro" href="about.html">
 					Nossa ONG
 				</a>
-				<a class="btn-texto-puro" href="about.html">
+				<a class="btn-texto-puro" href="contact.html">
 					Entre em contato
 				</a>	
 				<a class="btn-texto-puro" href="about.html">
@@ -50,8 +47,8 @@
 				Só para lembrar: a Lei n. 11.340/2006 leva o nome de Maria da Penha como uma forma de reparação simbólica depois de tantos anos de omissão do Estado brasileiro e de impunidade do seu agressor. Ela também representa o acesso à justiça e foi criada para garantir os direitos de milhares de mulheres vítimas de violência no País.
 			</p>
 			
-			<h1 class="titulo-principal2">
-				TIPOS DE VIOLENCIA
+			<h1 class="titulo-principal">
+				TIPOS DE VIOLÊNCIA
 			</h1>
 
 			<p class="paragrafo-m">
