página de doacoes

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css">
-	<title>ENTRE EM CONTATO</title>
+	<title>Entre em contato</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 				<a class="btn-texto-puro" href="about.html">
 					Nossa ONG
 				</a>
-				<a class="btn-texto-puro" href="about.html">
+				<a class="btn-texto-puro" href="donate.html">
 					Faça uma doação
 				</a>	
 			</div>
