--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a class="btn-texto-puro" href="contact.html">
 					Entre em contato
 				</a>	
-				<a class="btn-texto-puro" href="about.html">
+				<a class="btn-texto-puro" href="donate.html">
 					Faça uma doação
 				</a>	
 			</div>
