--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css">
-	<title>QUEM SOMOS?</title>
+	<title>Quem somos?</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 				<a class="btn-texto-puro" href="contact.html">
 					Entre em contato
 				</a>
-				<a class="btn-texto-puro" href="about.html">
+				<a class="btn-texto-puro" href="donate.html">
 					Faça uma doação
 				</a>	
 			</div>
