padronizando o nav bar

--- a/about.html
+++ b/about.html
@@ -18,9 +18,12 @@
 				<a class="btn-texto-puro" href="index.html">
 					Lei Maria da Penha
 				</a>
+				<a class="btn-texto-puro" href="about.html">
+					Nossa ONG
+				</a>
 				<a class="btn-texto-puro" href="contact.html">
 					Entre em contato
-				</a>
+				</a>	
 				<a class="btn-texto-puro" href="donate.html">
 					Faça uma doação
 				</a>	
