finalizando os tipos de violencia

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,14 @@
 				Fuck the deal is <br>
 				Fuck, kill, steal, shit <br>
 			</p>
+
+			<a href="index.html">
+				<div class="div-btn">
+					<p class="texto-btn-inv">
+						MENU
+					</p>
+				</div>
+
 		</div>
 	</div>	
 </body>
