--- a/index.html
+++ b/index.html
@@ -114,9 +114,66 @@
 				</div>
 			</div>
 			
+			<div class="grupo-tipo">
+				<div class="grupo-txt">
+					<h2 class="titulo-mauve">
+						5.Violência Intrafamiliar: 
+
+					</h2>
+		
+					<p class="paragrafo-m">
+						Realizado por um membro da família, até mesmo por pessoas que possuam relação parental, dentro ou fora do espaço domiciliar. Afeta a liberdade, o bem-estar e a integridade física e psicológica.
+						(dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 41º)
+
+					</p>
+				</div>
+				
+	
+				<div class="grupo-txt">
+					<h2 class="titulo-mauve">
+						6.Violência Patrimonial:
+					</h2>
+		
+					<p class="paragrafo-m">
+						Consiste no controle do dinheiro, retenção de documentos pessoais, destruição de objetos pessoais, bens etc. Entendida como qualquer conduta que configure retenção, subtração, destruição parcial ou total de seus objetos
+						(dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 7º)
+
+					</p>
+				</div>
+			</div>
+
+			<div class="grupo-tipo">
+				<div class="grupo-txt">
+					<h2 class="titulo-mauve">
+						7.Violência Institucional:
+					</h2>
+		
+					<p class="paragrafo-m">
+						Violência causada pela desigualdade entre usuários e profissionais dentro de instituições públicas ou privadas.
+						(Lei de Abuso de Autoridade: Lei nº 13.864/2019 , Art 15-A)
+
+					</p>
+				</div>
+				
+	
+				<div class="grupo-txt">
+					<h2 class="titulo-mauve">
+						8.Feminicídio: 
+					</h2>
+		
+					<p class="paragrafo-m">
+						Homicídio influenciado por questões de gênero contra a mulher.
+					(Lei nº 13.104/2015, altera o artigo 121 do Código Penal, instituindo o feminicídio como um crime de homicídio reforçando o combate contra a violência contra a mulher, e o artigo 1º da Lei de Crimes Hediondos, acrescentando o feminicídio à tal categoria).
+
+					</p>
+				</div>
+			</div>
 
 			<h1 class="titulo-mauve">
 				Não se cale, denuncie.
+				<br>
+				<br>
+
 			</h1>
 			
 		</div>
@@ -127,7 +184,7 @@
 			<p class="paragrafo-m-inv">
 				Mais Informações
 			</p>
-			<a href="https://open.spotify.com/artist/5RADpgYLOuS2ZxDq7ggYYH?si=oVk9McscTVW9QvcOZCE7IA" target="_blank">
+			<a href="contact.html" target="_blank">
 				<div class="div-btn-inv">
 					<p class="texto-btn">
 						Entre em contato
