espacamento dos frames dos tipos de violência

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="grid">
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						1.violência física
+						1. Violência física
 					</h1>
 					<p class="paragrafo-grid">
 						Consiste no uso da força física para causar alguma lesão, como tapas, socos, cortes, queimaduras. Entendida como qualquer conduta que ofenda a integridade ou saúde corporal da mulher. (dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 7º).
@@ -70,7 +70,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						2.violência sexual
+						2. Violência sexual
 					</h1>
 					<p class="paragrafo-grid">
 						 É a relação sexual sob coação ou forçada fisicamente, podendo ocorrer em diferentes cenários, como no próprio casamento, abusos por estranhos, prostituição forçada, aborto forçado, assédio sexual etc.Trata-se de qualquer conduta que constranja a presenciar, a manter ou a participar de relação sexual não desejada mediante intimidação. (dentro da Lei Maria da Penha: Lei nº 11.340/2006, , Art. 7º). 
@@ -78,7 +78,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						3.violência psicológica
+						3. Violência psicológica
 					</h1>
 					<p class="paragrafo-grid">
 						A violência que causa algum dano emocional, à autoestima e ao desenvolvimento da mulher, como: humilhação, chantagem, desvalorização, ameaça, exploração, isolamento, gaslighting (distorcer fatos e omitir situações), exposição, controle de ação, decisão e crença. (Lei 14.132/2021 inseriu no Código Penal Brasileiro o Art. 147-B, que traz a figura do crime de violência psicológica contra a mulher.)
@@ -86,7 +86,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						4.violência doméstica
+						4. Violência doméstica
 					</h1>
 					<p class="paragrafo-grid">
 						Abuso realizado por membros que vivem no mesmo espaço doméstico: envolve abuso sexual, físico, psicológico e etc. (dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 7º)
@@ -94,7 +94,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						5.violência intrafamiliar
+						5. Violência intrafamiliar
 					</h1>
 					<p class="paragrafo-grid">
 						Realizado por um membro da família, até mesmo por pessoas que possuam relação parental, dentro ou fora do espaço domiciliar. Afeta a liberdade, o bem-estar e a integridade física e psicológica. (dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 41º) 
@@ -110,7 +110,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						7.violência institucional
+						7. Violência institucional
 					</h1>
 					<p class="paragrafo-grid">
 						Violência causada pela desigualdade entre usuários e profissionais dentro de instituições públicas ou privadas. (Lei de Abuso de Autoridade: Lei nº 13.864/2019 , Art 15-A) 
@@ -118,7 +118,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						8.feminicidio
+						8. Feminicíd    io
 					</h1>
 					<p class="paragrafo-grid">
 						Homicídio influenciado por questões de gênero contra a mulher. (Lei nº 13.104/2015, altera o artigo 121 do Código Penal, instituindo o feminicídio como um crime de homicídio reforçando o combate contra a violência contra a mulher, e o artigo 1º da Lei de Crimes Hediondos, acrescentando o feminicídio à tal categoria).
