--- a/about.html
+++ b/about.html
@@ -26,7 +26,11 @@
 				</a>	
 				<a class="btn-texto-puro" href="donate.html">
 					Faça uma doação
+				</a>
+				<a class="btn-texto-puro" href="join.html">
+					Faça parte
 				</a>	
+				
 			</div>
 
 			<h1 class="titulo-principal">
