--- a/join.html
+++ b/join.html
@@ -40,6 +40,13 @@
 
 			</p>
 
+            <div>
+
+
+
+
+            </div>
+
 			<a href="index.html">
 				<div class="div-btn">
 					<p class="texto-btn-inv">
