--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,10 @@
 				<a class="btn-texto-puro" href="donate.html">
 					Faça uma doação
 				</a>	
+				<a class="btn-texto-puro" href="join.html">
+					Faça parte
+				</a>
+
 			</div>
 
 			<h1 class="titulo-principal">
