--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 				</a>	
 				<a class="btn-texto-puro" href="donate.html">
 					Faça uma doação
+				</a>
+				<a class="btn-texto-puro" href="join.html">
+					Faça parte
 				</a>	
 			</div>
 
