--- a/join.html
+++ b/join.html
@@ -52,19 +52,8 @@
                     <label for="fone" id="lbl_text">fone:</label>
                     <input type="text" id="in_phone" placeholder="digite seu telefone" required/>
         
-                    <input type="submit" class="send_input_button">
+                    <input type="submit" class="send_input_button" value="cadastrar">
                 </form>   
-
-            </div>
-
-			<a href="index.html">
-				<div class="div-btn">
-					<p class="texto-btn-inv">
-						MENU
-					</p>
-				</div>
-
-		</div>
 	</div>	
 </body>
 
