página de contato

--- a/contact.html
+++ b/contact.html
@@ -27,27 +27,83 @@
 				<a class="btn-texto-puro" href="donate.html">
 					Faça uma doação
 				</a>	
-				<a class="btn-texto-puro" href="join.html">
-					Faça parte
-				</a>
-
 			</div>
 
-			<h1 class="titulo-principal">
-				COMO ENTRAR EM CONTATO?
-			</h1>	
-			
+			<h1 class= "titulo-principal">-
+				ONG Fala Segura - Contatos
+			</h1>
+
+		
+		
+			<h1 class="subtitulo-principal">
+				Denunciar é o primeiro passo para a liberdade.
+			</h1>
+
 			<!-- lorem ipsum de cabaço -->
 
 			<p class="paragrafo-m">
-				I'm on that V, on that yellow pill shit <br>
-				Fuck the deal is <br>
-				Fuck, kill, steal, shit <br>
-				Fuck real <br>
-				I'm on that V, on that yellow pill shit <br>
-				Fuck the deal is <br>
-				Fuck, kill, steal, shit <br>
-			</p>
+				Conheça algumas redes de apoio: 	</p>
+
+				<p class="btn-texto-puro">
+					App "Penhas" - Com o PenhaS, todas podem ter acesso a informação, acolhimento <br>
+					e ferramentas de pedido de ajuda. Tudo em um mesmo espaço!
+				</p>
+				<!--aqui também pensei em colocarmos de forma diferente, como: " Onde buscar ajuda: "-->
+				<!--a gente pode adicionar nessa parte do css os botões que aprendemos em aula
+				mas colocar os links que direcionam para o app na apple e play store -->
+
+				<p class="paragrafo-m">
+					https://tamojuntas.org.br/ - Organização feminista composta por mulheres profissionais que atuam <br>
+					voluntariamente na assistência multidisciplinar a mulheres em situação de violência e que possui <br>
+					 voluntárias em diversas regiões do Brasil.
+                    Com incidência política local e nacional na perspectiva de denunciar e combater a violência contra a mulher. 
+
+				</p>
+
+
+				<p class="paragrafo-m"></p>
+				https://www.institutomariadapenha.org.br/ - Enfrentar, por meio de mecanismos de conscientização e empoderamento,<br>
+				 a violência doméstica e familiar contra a mulher.
+
+				</p>
+
+				<p class=""paragrafo-m>
+					https://www.mapadoacolhimento.org/ - Existimos para que as mulheres que procuram ajuda para quebrar o ciclo<br>
+					 da violência tenham acesso a um suporte integral e efetivo, seja nos serviços públicos ou por meio de nossa rede <br>
+					 de psicólogas e advogadas voluntárias. Para mulheres cis, trans e travestis de baixa renda em todo o Brasil, a partir de 18 anos.
+
+				</p>
+
+				<p class="paragrafo-m">
+					https://www.justiceiras.org.br/ - Para atender meninas e mulheres vítimas de violência doméstica, os institutos pretendem <br>
+					reunir o maior número possível de mulheres voluntárias nas áreas do Direito, Psicologia e Assistência Social de todo o Brasil, <br>
+					para que acolham, apoiem e prestem orientação técnica à distância, por meio do atendimento virtual. Também há busca por mulheres que desejem<br> 
+					compartilhar experiências de vida, profissional e que possuem empatia com o tema da violência contra a mulher, em exercício de solidariedade e esperança.
+				</p>
+
+				<p><!--aqui pensei em colocar em forma de um titulo também-->
+					Boletim de Ocorrência: É possível denunciar através de boletim de ocorrência online. <br>
+					Varia de estado para estado, mas geralmente são encontrados na internet com “Boletim de Ocorrência + seu estado”. <br>
+					Também pode ser feito em uma Delegacia de Atendimento à Mulher (DEAM), especializada para esse tipo de situação.
+
+				</p>
+
+				<p>
+					ENTRE EM CONTATO:          E-mail: atendimento@institutomariadapenha.org.br
+					
+											Instagram: https://www.instagram.com/institutomariadapenha/ 
+					</p>
+
+<p> 
+	Ao denunciar, você está ajudando a combater a violência contra a mulher e garantindo seus direitos.  Ligue 180 funciona 24 horas por dia, todos os dias da semana, e atende mulheres de todo o Brasil. 
+	
+	Você não está sozinha. Denuncie! 
+	
+	<!--editar como texto e como sub texto - frase de efeito-->
+</p>
+					
+				<!-- nos links a gente pode colocar de alguma forma diferente pra ter um destaque, sem a url, so o nome do site talvez-->
+
 
 			<a href="index.html">
 				<div class="div-btn">
