pagina de contato

--- a/contact.html
+++ b/contact.html
@@ -27,24 +27,22 @@
 				<a class="btn-texto-puro" href="donate.html">
 					Faça uma doação
 				</a>	
+				<a class="btn-texto-puro" href="join.html">
+					Faça parte
+				</a>	
 			</div>
 
-			<h1 class= "titulo-principal">-
-				ONG Fala Segura - Contatos
-			</h1>
-
-		
-		
-			<h1 class="subtitulo-principal">
+			<h1 class="titulo-principal">
 				Denunciar é o primeiro passo para a liberdade.
 			</h1>
 
 			<!-- lorem ipsum de cabaço -->
 
-			<p class="paragrafo-m">
-				Conheça algumas redes de apoio: 	</p>
+			<h2 class="subtitulo-contato">
+				Conheça algumas redes de apoio: 	
+			</h2>
 
-				<p class="btn-texto-puro">
+				<p class="paragrafo-m">
 					App "Penhas" - Com o PenhaS, todas podem ter acesso a informação, acolhimento <br>
 					e ferramentas de pedido de ajuda. Tudo em um mesmo espaço!
 				</p>
