finalização pg de contato e mudança na barra de nav

--- a/about.html
+++ b/about.html
@@ -10,11 +10,8 @@
 
 <body>
 	<div class="conteiner">
-
 		<div class="section-base">
-			
 			<div class="menu-topo">
-
 				<a class="btn-texto-puro" href="index.html">
 					Lei Maria da Penha
 				</a>
@@ -22,13 +19,10 @@
 					Nossa ONG
 				</a>
 				<a class="btn-texto-puro" href="contact.html">
-					Entre em contato
-				</a>	
-				<a class="btn-texto-puro" href="donate.html">
-					Faça uma doação
+					Informe-se
 				</a>
 				<a class="btn-texto-puro" href="join.html">
-					Faça parte
+					Cadastro
 				</a>	
 				
 			</div>
