--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 		<!-- section titulo -->
 
 		<div class="section-base">
-
 			<div class="menu-topo">
-
 				<a class="btn-texto-puro" href="index.html">
 					Lei Maria da Penha
 				</a>
@@ -24,13 +22,10 @@
 					Nossa ONG
 				</a>
 				<a class="btn-texto-puro" href="contact.html">
-					Entre em contato
-				</a>	
-				<a class="btn-texto-puro" href="donate.html">
-					Faça uma doação
+					Informe-se
 				</a>
 				<a class="btn-texto-puro" href="join.html">
-					Faça parte
+					Cadastro
 				</a>	
 			</div>
 
@@ -105,7 +100,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						6.violência patrimonial
+						6. Violência patrimonial
 					</h1>
 					<p class="paragrafo-grid">
 						Consiste no controle do dinheiro, retenção de documentos pessoais, destruição de objetos pessoais, bens etc. Entendida como qualquer conduta que configure retenção, subtração, destruição parcial ou total de seus objetos (dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 7º)
@@ -138,29 +133,28 @@
 			
 		</div>
 		
-		<!-- section info -->
-
-		<div class="section-branca">
-			<p class="paragrafo-m-inv">
-				Mais Informações
-			</p>
-			<a href="contact.html" target="_blank">
-				<div class="div-btn-inv">
-					<p class="texto-btn">
-						Entre em contato
-					</p>
-				</div>
-			</a>
-			<a href="about.html">
-				<div class="div-btn-inv">
-					<p class="texto-btn">
-						Nossa ONG
-					</p>
-				</div>
-			</a>
-		</div>
 			
 	</div>
 </body>
-
+<footer>
+	<div class="section-branca">
+		<p class="paragrafo-m-inv">
+			Mais Informações
+		</p>
+		<a href="https://www.institutomariadapenha.org.br/" target="_blank">
+			<div class="div-btn-inv">
+				<p class="texto-btn">
+					Entre em contato
+				</p>
+			</div>
+		</a>
+		<a href="about.html">
+			<div class="div-btn-inv">
+				<p class="texto-btn">
+					Nossa ONG
+				</p>
+			</div>
+		</a>
+	</div>
+</footer>
 </html>
