--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 			</p>
 		</div>
 		<div class="section-surface">
-			<h1 class="titulo-peach">
+			<h1 class="titulo-mauve">
 			Visão
 			</h1>
 
@@ -53,16 +53,30 @@
 				<br>
 				Queremos construir uma sociedade em que o respeito e a igualdade de gênero sejam princípios fundamentais.
 			</p>
-
-			<a href="index.html">
-				<div class="div-btn">
-					<p class="texto-btn-inv">
-						MENU
+		</div>
+	</div>	
+</body>
+<footer>
+	<div class="section-branca">
+		<p class="paragrafo-m-inv">
+			Mais Informações
+		</p>
+		<div>
+			<a href="https://www.institutomariadapenha.org.br/" target="_blank">
+				<div class="div-btn-inv">
+					<p class="texto-btn">
+						Entre em contato
+					</p>
+				</div>
+			</a>
+			<a href="about.html">
+				<div class="div-btn-inv">
+					<p class="texto-btn">
+						Nossa ONG
 					</p>
 				</div>
 			</a>
 		</div>
-	</div>	
-</body>
-
+	</div>
+</footer>
 </html>
