--- a/index.html
+++ b/index.html
@@ -141,20 +141,22 @@
 		<p class="paragrafo-m-inv">
 			Mais Informações
 		</p>
-		<a href="https://www.institutomariadapenha.org.br/" target="_blank">
-			<div class="div-btn-inv">
-				<p class="texto-btn">
-					Entre em contato
-				</p>
-			</div>
-		</a>
-		<a href="about.html">
-			<div class="div-btn-inv">
-				<p class="texto-btn">
-					Nossa ONG
-				</p>
-			</div>
-		</a>
+		<div>
+			<a href="https://www.institutomariadapenha.org.br/" target="_blank">
+				<div class="div-btn-inv">
+					<p class="texto-btn">
+						Entre em contato
+					</p>
+				</div>
+			</a>
+			<a href="about.html">
+				<div class="div-btn-inv">
+					<p class="texto-btn">
+						Nossa ONG
+					</p>
+				</div>
+			</a>
+		</div>
 	</div>
 </footer>
 </html>
