--- a/join.html
+++ b/join.html
@@ -56,5 +56,27 @@
                 </form>   
 	</div>	
 </body>
-
+<footer>
+	<div class="section-branca">
+		<p class="paragrafo-m-inv">
+			Mais Informações
+		</p>
+		<div>
+			<a href="https://www.institutomariadapenha.org.br/" target="_blank">
+				<div class="div-btn-inv">
+					<p class="texto-btn">
+						Entre em contato
+					</p>
+				</div>
+			</a>
+			<a href="about.html">
+				<div class="div-btn-inv">
+					<p class="texto-btn">
+						Nossa ONG
+					</p>
+				</div>
+			</a>
+		</div>
+	</div>
+</footer>
 </html>
