--- a/contact.html
+++ b/contact.html
@@ -159,16 +159,31 @@
 				Você não está sozinha. Denuncie! 
 			</h2>
 
-			<a href="index.html">
-				<div class="div-btn">
-					<p class="texto-btn-inv">
-						MENU
-					</p>
-				</div>
-
 		</div>
 	</div>	
 </body>
-
+<footer>
+	<div class="section-branca">
+		<p class="paragrafo-m-inv">
+			Mais Informações
+		</p>
+		<div>
+			<a href="https://www.institutomariadapenha.org.br/" target="_blank">
+				<div class="div-btn-inv">
+					<p class="texto-btn">
+						Entre em contato
+					</p>
+				</div>
+			</a>
+			<a href="about.html">
+				<div class="div-btn-inv">
+					<p class="texto-btn">
+						Nossa ONG
+					</p>
+				</div>
+			</a>
+		</div>
+	</div>
+</footer>
 </html>
 
