--- a/index.html
+++ b/index.html
@@ -52,15 +52,11 @@
 
 			<h1 class="titulo-principal">
 				TIPOS DE VIOLÊNCIA
-			</h1>
-			<p class="subtitulo-principal">
-				lugubrioso; ainda vou mudar saporra
-			</p>
 			
 			<div class="grid">
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						1. Violência física
+						1. Violência Física
 					</h1>
 					<p class="paragrafo-grid">
 						Consiste no uso da força física para causar alguma lesão, como tapas, socos, cortes, queimaduras. Entendida como qualquer conduta que ofenda a integridade ou saúde corporal da mulher. (dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 7º).
@@ -68,7 +64,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						2. Violência sexual
+						2. Violência Sexual
 					</h1>
 					<p class="paragrafo-grid">
 						 É a relação sexual sob coação ou forçada fisicamente, podendo ocorrer em diferentes cenários, como no próprio casamento, abusos por estranhos, prostituição forçada, aborto forçado, assédio sexual etc.Trata-se de qualquer conduta que constranja a presenciar, a manter ou a participar de relação sexual não desejada mediante intimidação. (dentro da Lei Maria da Penha: Lei nº 11.340/2006, , Art. 7º). 
@@ -76,7 +72,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						3. Violência psicológica
+						3. Violência Psicológica
 					</h1>
 					<p class="paragrafo-grid">
 						A violência que causa algum dano emocional, à autoestima e ao desenvolvimento da mulher, como: humilhação, chantagem, desvalorização, ameaça, exploração, isolamento, gaslighting (distorcer fatos e omitir situações), exposição, controle de ação, decisão e crença. (Lei 14.132/2021 inseriu no Código Penal Brasileiro o Art. 147-B, que traz a figura do crime de violência psicológica contra a mulher.)
@@ -84,7 +80,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						4. Violência doméstica
+						4. Violência Doméstica
 					</h1>
 					<p class="paragrafo-grid">
 						Abuso realizado por membros que vivem no mesmo espaço doméstico: envolve abuso sexual, físico, psicológico e etc. (dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 7º)
@@ -92,7 +88,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						5. Violência intrafamiliar
+						5. Violência Intrafamiliar
 					</h1>
 					<p class="paragrafo-grid">
 						Realizado por um membro da família, até mesmo por pessoas que possuam relação parental, dentro ou fora do espaço domiciliar. Afeta a liberdade, o bem-estar e a integridade física e psicológica. (dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 41º) 
@@ -100,7 +96,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						6. Violência patrimonial
+						6. Violência Patrimonial
 					</h1>
 					<p class="paragrafo-grid">
 						Consiste no controle do dinheiro, retenção de documentos pessoais, destruição de objetos pessoais, bens etc. Entendida como qualquer conduta que configure retenção, subtração, destruição parcial ou total de seus objetos (dentro da Lei Maria da Penha: Lei nº 11.340/2006, Art. 7º)
@@ -108,7 +104,7 @@
 				</div>
 				<div class="frame">
 					<h1 class="titulo-mauve">
-						7. Violência institucional
+						7. Violência Institucional
 					</h1>
 					<p class="paragrafo-grid">
 						Violência causada pela desigualdade entre usuários e profissionais dentro de instituições públicas ou privadas. (Lei de Abuso de Autoridade: Lei nº 13.864/2019 , Art 15-A) 
