--- a/join.html
+++ b/join.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Entre em contato</title>
+	<title>Cadastre-se</title>
 </head>
 
 <body>
